# infradb

./: .gitignore  Dockerfile.engine  README.md  build.sh  fix_indentation.py  jsconfig.json
backend/: .gitignore  Dockerfile  README.md  build.sh  db_manager.py  docker-compose.yml  manage.py  requirements.txt
backend/ai_assistant/: urls.py  views.py
backend/backend/: __init__.py  celery_app.py  settings.py  urls.py
backend/backend/settings/: base.py  local.py  production.py
backend/backend/user_databases/: mydb.db
backend/core/: ai_advisor.py  db_manager.py  excel_handler.py  models.py  perplexity_api.py  schema_engine.py  serializers.py  tasks.py  tests.py  tests_integration.py  urls.py  views.py
backend/core/migrations/: 0001_initial.py  0002_queryhistory_delete_savedquery.py  0003_rename_sql_queryhistory_query_and_more.py  0004_queryhistory_db_type_queryhistory_name.py  0005_remove_queryhistory_db_type_remove_queryhistory_name.py  0006_alter_queryhistory_options_and_more.py  0007_queryhistory_error_message_queryhistory_status_and_more.py
backend/databases/: models.py  serializers.py  services.py  urls.py  views.py
backend/databases/migrations/: 0001_initial.py
backend/deploydb/: Dockerfile  __init__.py  admin.py  apps.py  docker-compose.yml  docker_provisioner.py  encryption.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/deploydb/migrations/: 0001_initial.py  0002_rename_name_deployment_db_name_and_more.py  0003_alter_deployment_id.py
backend/query_engine/: engine_client.py  models.py  serializers.py  services.py  urls.py  views.py
backend/query_engine/migrations/: 0001_initial.py
backend/user_databases/: default.db
docs/: INTEGRATION.md
engine/: CMakeLists.txt  main.cpp
engine/core/: query_executor.cpp  query_executor.h  thread_pool.cpp  thread_pool.h
engine/proto/: query.proto
frontend/: .env.production  .gitignore  README.md  index.html  package-lock.json  package.json  preload.js  tailwind.config.js  vite.config.js
frontend/electron/: bootstrap.cjs  builder.yml  dev_missing.html  main.cjs  main.js  preload.cjs
frontend/src/: App.jsx  index.css  main.jsx  styles.css
frontend/src/api/: axios.js  dbService.js
frontend/src/components/: SidebarExplorer.jsx
frontend/src/components/ai/: AISidebar.jsx
frontend/src/components/layout/: Header.jsx  Shell.jsx  Sidebar.jsx  StatusBar.jsx
frontend/src/components/ui/: CommandPalette.jsx
frontend/src/components/workbench/: EditorPanel.jsx
frontend/src/context/: EditorContext.jsx
frontend/src/hooks/: useAPI.js  useAuth.jsx  useDatabase.js
frontend/src/services/: api.js
include/infradb/compute/: VectorKernels.hpp
include/infradb/concurrency/: RingBuffer.hpp  TaskScheduler.hpp
include/infradb/core/: QueryExecutor.hpp
include/infradb/memory/: Pool.hpp
native/include/infradb/execution/: Executor.hpp
native/proto/: engine.proto
native/src/core/: Engine.cpp  GRPCServer.cpp
src/: main.cpp
src/core/: QueryExecutor.cpp
